# cppZvm

./: CMakeLists.txt  main.cpp  readme.md
include/: Errors.hpp  Object_meta_data.hpp  Objects.hpp  ZataBuiltins.hpp  ZataVM.hpp  ZvmOpcodes.hpp  utils.hpp
include/builtins/: builtins_functions.hpp  builtins_type.hpp
include/models/: Errors.hpp  Objects.hpp  VmDepends.hpp
include/utils/: SLL_loader.hpp  Utils.hpp
include/vm_deps/: CallFrame.hpp  VmModels.hpp  ZvmOpcodes.hpp  vm_ctor.hpp
